--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1269,7 +1269,7 @@
     "Tooltip": {
       "Application": "Stream Deck Application",
       "AuthRequired": "Click this button or go to settings and click \"Connect application\".",
-      "Error": "Your Stream Deck plugin is no more supported. Please update to the latest version. This plugin requires at least:",
+      "Error": "Your Stream Deck plugin is no longer supported. Please update to the latest version. This plugin requires at least:",
       "ErrorConnection": "if you're already using the latest version, check if some browser extension is blocking the connection.",
       "ExtensionIssue": "Extensions Issue",
       "Plugin": "Plugin",
