Mobile optimizer improvements

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -642,7 +642,7 @@
     "ExistingLoadout": "Existing Loadout",
     "Exotic": "Exotic Armor",
     "ExoticSpecialCategory": "Special",
-    "Filter": "Filters",
+    "Filter": "Settings",
     "IgnoreStat": "If unchecked, Loadout Optimizer will pretend this stat doesn't exist when building sets",
     "IncreaseStatPriority": "Increase stat priority",
     "Legendary": "Legendary",
