--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -736,7 +736,7 @@
     "EquippableDifferent2": "Maximum Power isn't limited by the \"One Exotic\" rule when determining the Power of your drops, powerful, and pinnacle rewards.",
     "Failed": "Loadout failed to apply completely",
     "Fashion": "Choose fashion",
-    "FashionOnly": "Fashion Only",
+    "FashionOnly": "Fashion-only",
     "FillFromEquipped": "Fill in using equipped",
     "FillFromInventory": "Fill in using non-equipped",
     "FilteredItems": "Filtered Items",
@@ -793,7 +793,7 @@
       "UpgradeCostsDesc": "Some armor needs energy capacity upgrades to fit the requested mods. In total, these upgrades cost:"
     },
     "Mods": "Mods",
-    "ModsOnly": "Mods Only",
+    "ModsOnly": "Mods-only",
     "MoveItems": "Moving items",
     "NoSpace": "You're out of space in the vault and any other characters.",
     "NoneMatch": "None of your loadouts matched the filters.",
