--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1207,6 +1207,7 @@
     "PowerModifier": "Power granted by seasonal experience progression",
     "Prestige": "Prestige Level: {{level}}\n{{exp}}xp until 5 motes of light.",
     "Quality": "Stats quality",
+    "ShieldHP": "Shield HP",
     "StrafingSpeed": "Strafing",
     "Strength": "Strength",
     "Sunset": "Sunset",
