--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -983,8 +983,10 @@
       "Damage": "Damage",
       "Energy": "Energy",
       "Event": "Event",
+      "Harmonizable": "Harmonizable",
       "Icon": "Icon",
       "KillTracker": "Kill Tracker",
+      "Level": "Level",
       "Loadouts": "Loadouts",
       "Location": "Location",
       "Locked": "Locked",
