--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -695,6 +695,11 @@
     "UnableToAddAllModsBody": "There weren't enough mod slots available to fit {{mods}}.",
     "UnlockItem": "Unpin Item"
   },
+  "LoadoutFilter": {
+    "Name": "Shows loadouts whose name matches (exactname:) or partially matches (name:) the filter text. Search for entire phrases using quotes.",
+    "Notes": "Search for loadouts by their notes field.",
+    "PartialMatch": "Shows loadouts where their name or notes has a partial match to the filter text. Search for entire phrases using quotes."
+  },
   "Loadouts": {
     "Abilities": "Abilities",
     "AddEquippedItems": "Add Equipped",
