--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -702,7 +702,8 @@
     "Name": "Shows loadouts whose name matches (exactname:) or partially matches (name:) the filter text. Search for entire phrases using quotes.",
     "Notes": "Search for loadouts by their notes field.",
     "PartialMatch": "Shows loadouts where their name or notes has a partial match to the filter text. Search for entire phrases using quotes.",
-    "Season": "Shows loadouts by which season of Destiny 2 they were last modified in."
+    "Season": "Shows loadouts by which season of Destiny 2 they were last modified in.",
+    "Subclass": "Shows loadouts whose name partially matches the filter text."
   },
   "Loadouts": {
     "Abilities": "Abilities",
