--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -698,7 +698,8 @@
   "LoadoutFilter": {
     "Name": "Shows loadouts whose name matches (exactname:) or partially matches (name:) the filter text. Search for entire phrases using quotes.",
     "Notes": "Search for loadouts by their notes field.",
-    "PartialMatch": "Shows loadouts where their name or notes has a partial match to the filter text. Search for entire phrases using quotes."
+    "PartialMatch": "Shows loadouts where their name or notes has a partial match to the filter text. Search for entire phrases using quotes.",
+    "Subclass": "Shows loadouts whose name partially matches the filter text. Note this is currently restricted to names and not the element name."
   },
   "Loadouts": {
     "Abilities": "Abilities",
