--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -696,9 +696,12 @@
     "UnlockItem": "Unpin Item"
   },
   "LoadoutFilter": {
+    "FashionOnly": "Shows loadouts that contain only fashion (shaders or ornaments).",
+    "ModsOnly": "Shows loadouts that only contain armor mods.",
     "Name": "Shows loadouts whose name matches (exactname:) or partially matches (name:) the filter text. Search for entire phrases using quotes.",
     "Notes": "Search for loadouts by their notes field.",
-    "PartialMatch": "Shows loadouts where their name or notes has a partial match to the filter text. Search for entire phrases using quotes."
+    "PartialMatch": "Shows loadouts where their name or notes has a partial match to the filter text. Search for entire phrases using quotes.",
+    "Season": "Shows loadouts by which season of Destiny 2 they were last modified in."
   },
   "Loadouts": {
     "Abilities": "Abilities",
