--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -723,7 +723,7 @@
     "ClearSpaceWeapons": "Move other weapons away",
     "ClearUnsetMods": "Remove other mods",
     "ClearingSpace": "Moving other items away",
-    "CopyAndEdit": "Copy and Edit",
+    "CopyAndEdit": "Edit Copy",
     "Create": "Create Loadout",
     "CurrentlyEquipped": "Currently Equipped",
     "Deequip": "De-equipping items from other characters",
