--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -703,7 +703,7 @@
     "Notes": "Search for loadouts by their notes field.",
     "PartialMatch": "Shows loadouts where their name or notes has a partial match to the filter text. Search for entire phrases using quotes.",
     "Season": "Shows loadouts by which season of Destiny 2 they were last modified in.",
-    "Subclass": "Shows loadouts whose name partially matches the filter text."
+    "Subclass": "Shows loadouts whose subclass name or damage type partially matches the filter text."
   },
   "Loadouts": {
     "Abilities": "Abilities",
