--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -230,6 +230,8 @@
     "DupeLower": "Duplicate items, including reissues, that are not the highest power dupe. Only one duplicate is chosen as the highest, and the rest are considered lower.",
     "Energy": "Shows items that have energy capacity (Armor 2.0).",
     "Engrams": "Shows engrams.",
+    "Enhanceable": "Shows weapons that can be enhanced.",
+    "Enhanced": "Shows weapons that have been enhanced.",
     "EnhancedPerk": "Shows weapons that have the specified number of enhanced perks.",
     "Equipment": "Items that can be equipped.",
     "Equipped": "Items that are currently equipped on a character.",
