Change light/dark filter to enum, fix wording

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -294,7 +294,7 @@
     "PowerLevel": "Shows items based on their power level. $t(Filter.PowerKeywords)",
     "PowerLimit": "Shows items based on the maximum power level they can be infused to. $t(Filter.PowerKeywords)",
     "PowerfulReward": "Shows pursuits which produce a powerful reward.",
-    "PrismaticDamageType": "Shows items based on if they are a light or dark damage type. Light types are considered arc, solar, and void. Dark types are considered stasis and strand.",
+    "PrismaticDamageType": "Shows items based on if they are a light or darkness damage type. Light types are arc, solar, and void. Darkness types are stasis and strand.",
     "Quality": "Shows items based on their total stat quality percentage. '{{percentage}}' is an alias for '{{quality}}'.",
     "RandomRoll": "Shows items that drop with random rolls.",
     "RarityTier": "Shows items based on their rarity tier.",
