--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -705,7 +705,6 @@
     "UnlockItem": "Unpin Item"
   },
   "LoadoutFilter": {
-    "ArmorLight": "Shows loadouts based on the calculated light level of the armor. Use the pinnaclecap or softcap keyword instead of a number to refer to the current season's power limits.",
     "Contains": "Shows loadouts which have an item or a mod matching the filter text. Search for items with spaces in their name using quotes.",
     "FashionOnly": "Shows loadouts that contain only fashion (shaders or ornaments).",
     "LoadoutLight": "Shows loadouts based on their calculated light level. Use the pinnaclecap or softcap keyword instead of a number to refer to the current season's power limits.",
@@ -714,8 +713,7 @@
     "Notes": "Search for loadouts by their notes field.",
     "PartialMatch": "Shows loadouts where their name or notes has a partial match to the filter text. Search for entire phrases using quotes.",
     "Season": "Shows loadouts by which season of Destiny 2 they were last modified in.",
-    "Subclass": "Shows loadouts whose subclass name or damage type partially matches the filter text.",
-    "WeaponLight": "Shows loadouts based on the calculated light level of the weapons. Use the pinnaclecap or softcap keyword instead of a number to refer to the current season's power limits."
+    "Subclass": "Shows loadouts whose subclass name or damage type partially matches the filter text."
   },
   "Loadouts": {
     "Abilities": "Abilities",
