account-wide power level

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1221,11 +1221,16 @@
     "CustomDesc": "Custom total of selected base stats, ignoring mods or masterworks. Visit Settings to configure which stats are included.",
     "DamageResistance": "PvE Damage Resist",
     "Discipline": "Discipline",
+    "DropLevel": "Account Power",
+    "DropLevelExplanation1": "Account Power is the base current level when calculating the increased level of Powerful and Pinnacle rewards.",
+    "DropLevelExplanation2": "Account Power uses the highest level item in each slot, regardless of required Class or the \"One Exotic\" rule.",
+    "EquippableGear": "Equippable Gear",
     "FlinchResistance": "Flinch Resist",
     "HP": "HP",
     "Intellect": "Intellect",
     "MaxGearPower": "Maximum Power of equippable gear",
     "MaxGearPowerAll": "Maximum Power of all gear",
+    "MaxGearPowerOneExoticRule": "Maximum Power of equippable gear\n(only one Exotic armor piece equipped)",
     "MaxTotalPower": "Maximum total Power",
     "MetersPerSecond": "m/s",
     "Milliseconds": "ms",
