--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -345,10 +345,14 @@
   },
   "Glyphs": {
     "Gilded": "Gilded",
+    "Harmonic": "Harmonic",
+    "HiveRelic": "Hive Relic",
+    "Light": "Light",
     "Misadventure": "Misadventure",
     "Missing": "Missing",
     "OpenSymbolsPicker": "Open Symbols Picker",
     "Quickfall": "Quickfall",
+    "RespawnRestricted": "RespawnRestricted",
     "ScorchCannon": "Scorch Cannon",
     "SearchSymbols": "Search Symbols...",
     "Smoke": "Smoke"
