--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -106,8 +106,7 @@
       "Unmatched": "This item doesn't match the type of items being compared."
     },
     "InitialItem": "This is the item the Compare tool was launched from",
-    "IsVendorItem": "This item is not owned. This is in a vendor's inventory and may be for sale.",
-    "SoldBy": "Sold by: {{vendorName}}"
+    "IsVendorItem": "This item is not in your inventory, but {{vendorName}} sells it."
   },
   "Cooldown": {
     "Grenade": "Grenade cooldown: {{cooldown}}",
