Fix some columns

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1028,6 +1028,7 @@
       "Event": "Event",
       "Harmonizable": "Harmonizable",
       "Icon": "Icon",
+      "Intrinsics": "Intrinsic Perks",
       "KillTracker": "Kill Tracker",
       "Level": "Level",
       "Loadouts": "Loadouts",
