shaders column, special perk string sort

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1047,6 +1047,7 @@
       "Quality": "Quality %",
       "Recency": "Recency",
       "Season": "Season",
+      "Shaders": "Cosmetics",
       "Source": "Source",
       "StatQuality": "Stat Quality",
       "StatQualityStat": "{{stat}}%",
