--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1028,7 +1028,7 @@
       "Event": "Event",
       "Harmonizable": "Harmonizable",
       "Icon": "Icon",
-      "Intrinsics": "Intrinsic Perks",
+      "Intrinsics": "Intrinsic",
       "KillTracker": "Kill Tracker",
       "Level": "Level",
       "Loadouts": "Loadouts",
@@ -1042,7 +1042,7 @@
       "Notes": "Notes",
       "PercentComplete": "% Complete",
       "Perks": "Perks",
-      "PerksMods": "Perks, Mods & Shaders",
+      "PerksMods": "Perks & Mods",
       "Power": "Power",
       "Quality": "Quality %",
       "Recency": "Recency",
