Separate out origin traits

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1040,6 +1040,8 @@
       "Name": "Name",
       "New": "New",
       "Notes": "Notes",
+      "OriginTraits": "Origin Trait",
+      "OtherPerks": "Other Perks",
       "PercentComplete": "% Complete",
       "Perks": "Perks",
       "PerksMods": "Perks & Mods",
