Better no-items text

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1063,7 +1063,8 @@
     },
     "EnabledColumns": "Enabled Columns",
     "Lock": "Lock",
-    "NoItems": "No items selected",
+    "NoItems": "Select a category above to start digging into your items.",
+    "NoItemsQuery": "No items selected. If you have a search query, try clearing it.",
     "NoMobile": "Turn your phone sideways to use the Organizer.",
     "Note": "Set Notes",
     "OpenIn": "Show in Organizer",
