Parity with weapons

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1026,6 +1026,7 @@
       "Damage": "Damage",
       "Energy": "Energy",
       "Event": "Event",
+      "Foundry": "",
       "Harmonizable": "Harmonizable",
       "Icon": "Icon",
       "Intrinsics": "Intrinsic",
