Correct order, at least for weapons

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1026,7 +1026,7 @@
       "Damage": "Damage",
       "Energy": "Energy",
       "Event": "Event",
-      "Foundry": "",
+      "Foundry": "Foundry",
       "Harmonizable": "Harmonizable",
       "Icon": "Icon",
       "Intrinsics": "Intrinsic",
