--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -204,7 +204,7 @@
     "ArmorIntrinsic": "Shows legendary armor which has an intrinsic perk, such as Artifice Armor.",
     "Ascended": "Shows items that have an ascend node which have been ascended.",
     "Breaker": "Filter by breaker type or corresponding champion type.",
-    "BreakerMod": "Filter by available anti-champion artifact mods for this breaker type or corresponding champion type.",
+    "BreakerMod": "",
     "BulkClear": "Removed tag from 1 item.",
     "BulkClear_plural": "Removed tags from {{count}} items.",
     "BulkRevert": "Reverted tag on 1 item.",
