--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -229,6 +229,7 @@
     "Dupe": "Shows duplicate items, including reissues",
     "DupeCount": "Items that have the specified number of duplicates.",
     "DupeLower": "Duplicate items, including reissues, that are not the highest power dupe. Only one duplicate is chosen as the highest, and the rest are considered lower.",
+    "DupePerks": "Shows items whose perks are either a duplicate of, or a subset of, another item of the same type.",
     "Energy": "Shows items that have energy capacity (Armor 2.0).",
     "Engrams": "Shows engrams.",
     "Enhanceable": "Shows weapons that can be enhanced.",
@@ -288,7 +289,6 @@
     "PatternUnlocked": "Shows items that have a crafting pattern unlocked, even if the item itself isn't crafted.",
     "Perk": "Shows items where one of their perks or mods has a partial match to the filter text in their name or description. Search for entire phrases using quotes.",
     "PerkName": "Shows items with a perk or mod whose name matches (exactperk:) or partially matches (perkname:) the filter text. Search for entire phrases using quotes.",
-    "PerksDupe": "Shows items whose perks are either a duplicate of, or a subset of, another item of the same type.",
     "PinnacleReward": "Shows pursuits which produce a pinnacle reward.",
     "Postmaster": "Items that are currently in the Postmaster.",
     "PowerKeywords": "Use the pinnaclecap or softcap keyword instead of a number to refer to the current season's power limits.",
