--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -203,7 +203,7 @@
     "ArmorCategory": "Shows armors based on their category.",
     "ArmorIntrinsic": "Shows legendary armor which has an intrinsic perk, such as Artifice Armor.",
     "Ascended": "Shows items that have an ascend node which have been ascended.",
-    "Breaker": "Filter by breaker type or corresponding champion type.",
+    "Breaker": "Filter by breaker type or corresponding champion type. breaker:instrinsic shows items with intrinsic breaker ability.",
     "BulkClear": "Removed tag from 1 item.",
     "BulkClear_plural": "Removed tags from {{count}} items.",
     "BulkRevert": "Reverted tag on 1 item.",
