--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -801,6 +801,7 @@
     "OnWrongCharacterWarning": "This character's most powerful armor is on another character. To count toward the Power of drops, powerful, and pinnacle rewards, armor must be on this character or in the Vault.",
     "OnlyItems": "Only equippable items, materials, and consumables can be added to a loadout.",
     "OpenInOptimizer": "Optimize Armor",
+    "OpenOnStreamDeck": "Open on Stream Deck",
     "PickArmor": "Pick Armor",
     "PickMods": "Add armor mods",
     "PullFromPostmaster": "Collect Postmaster",
@@ -926,6 +927,7 @@
     },
     "MissingSockets": "Perk and mod details are unavailable while Bungie is updating their services. It will return when they are done, usually in a few hours.",
     "Notes": "Notes:",
+    "OpenOnStreamDeck": "Open on Stream Deck",
     "OverviewTab": "Overview",
     "Owned": "This item is in your inventory.",
     "OwnedMod": "This mod is in your modifications inventory.",
