--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1092,7 +1092,9 @@
   },
   "Progress": {
     "Bounties": "Bounties",
+    "CruciblePathfinder": "Crucible Pathfinder",
     "CrucibleRank": "Ranks",
+    "GambitPathfinder": "Gambit Pathfinder",
     "Items": "Quest Items",
     "Milestones": "Milestones & Challenges",
     "NoEventChallenges": "You have completed all event challenges",
@@ -1112,10 +1114,10 @@
     "RecordValue": "{{value}}pts",
     "Resets": "1 reset",
     "Resets_plural": "{{count}} resets",
-    "RitualPathfinder": "Ritual Pathfinder",
     "SecretTriumph": "Secret Triumph",
     "StatTrackers": "Stat Trackers",
-    "TrackedTriumphs": "Tracked Triumphs"
+    "TrackedTriumphs": "Tracked Triumphs",
+    "VanguardPathfinder": "Vanguard Pathfinder"
   },
   "RecordBooks": {
     "HideCompleted": "Hide completed records",
