Improve wishlist loading

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1483,12 +1483,13 @@
     "Clear": "Clear Wish List",
     "CopiedLine": "Wish List roll copied to clipboard",
     "CopyLine": "Copy Selected Perks as Wish List Roll",
+    "DupeRolls": " (+{{num, number}} ignored dupes)",
     "ExternalSource": "Add another wish list",
     "ExternalSourcePlaceholder": "Paste wish list URL here",
     "Header": "Wish List",
     "Import": "Load Wish List Rolls",
-    "ImportError": "Error loading wish list: {{error}}",
-    "ImportFailed": "No wish list information found.",
+    "ImportError": "Error loading wish list from \"{{url}}\": {{error}}",
+    "ImportFailed": "None of your wish lists contained any valid rolls.",
     "ImportNoFile": "No file selected.",
     "InvalidExternalSource": "Please enter a valid URL for your external wish list source. The URL must start with one of the following:",
     "JustAnotherTeam": "Just Another Team",
