--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -103,7 +103,6 @@
       "Invalid": "There are no valid items for comparison.",
       "Unmatched": "This item doesn't match the type of items being compared."
     },
-    "InitialItem": "This is the item the Compare tool was launched from",
     "IsVendorItem": "This item is not in your inventory, but {{vendorName}} sells it.",
     "NoModArmor": "Pre-mods"
   },
@@ -1047,6 +1046,7 @@
       "MasterworkStat": "Masterwork Stat",
       "MasterworkTier": "Masterwork Tier",
       "ModSlot": "Mod Slot",
+      "Mods": "Mods",
       "Name": "Name",
       "New": "New",
       "Notes": "Notes",
