update and test translations

--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -32,11 +32,11 @@
     "NoNotes": "메모 없음",
     "OpenInArmory": "무기고에서 보기",
     "Season": "{{season}}시즌, {{year}}년차",
-    "TrashlistedRolls": "쓰레기 목록에 추가된 특성 조합",
-    "TrashlistedRolls_plural": "{{count, number}}개의 쓰레기 목록에 추가된 특성 조합",
+    "TrashlistedRolls_one": "쓰레기 목록에 추가된 특성 조합",
+    "TrashlistedRolls_other": "{{count, number}}개의 쓰레기 목록에 추가된 특성 조합",
     "Unknown": "알 수 없는 아이템",
-    "WishlistedRolls": "희망 아이템 목록에 추가된 특성 조합",
-    "WishlistedRolls_plural": "{{count, number}}개의 희망 아이템 목록에 추가된 특성 조합",
+    "WishlistedRolls_one": "희망 아이템 목록에 추가된 특성 조합",
+    "WishlistedRolls_other": "{{count, number}}개의 희망 아이템 목록에 추가된 특성 조합",
     "YourItems": "내 아이템"
   },
   "Browsercheck": {
@@ -62,8 +62,8 @@
     "Confirm": "메모 업데이트",
     "Remove": "메모에서 제거 / #해시태그 제거",
     "Replace": "메모 교체",
-    "Title": "아이템 1개의 메모 변경",
-    "Title_plural": "아이템 {{count}}개의 메모 변경"
+    "Title_one": "아이템 1개의 메모 변경",
+    "Title_other": "아이템 {{count}}개의 메모 변경"
   },
   "BungieAlert": {
     "Title": "Bungie의 메시지:"
@@ -113,17 +113,17 @@
     "Super": "궁극기 재사용 대기시간: {{cooldown}}"
   },
   "Countdown": {
-    "Days": "1일",
-    "Days_compact": "{{count}}일",
-    "Days_compact_plural": "{{count}}일",
-    "Days_plural": "{{count}}일"
+    "Days_one": "1일",
+    "Days_compact_one": "{{count}}일",
+    "Days_compact_other": "{{count}}일",
+    "Days_other": "{{count}}일"
   },
   "Csv": {
     "EmptyFile": "파일에 행이 없습니다.",
     "ImportConfirm": "정말로 CSV에서 태그와 메모를 가져오시겠습니까? 스프레드시트에 포함된 모든 아이템의 태그와 메모를 덮어씁니다.",
     "ImportFailed": "CSV에서 태그와 메모 가져오기 실패: {{error}}",
-    "ImportSuccess": "1개의 아이템에 대한 태그와 메모를 불러왔습니다.",
-    "ImportSuccess_plural": "{{count}}개의 아이템에 대한 태그와 메모를 불러왔습니다.",
+    "ImportSuccess_one": "1개의 아이템에 대한 태그와 메모를 불러왔습니다.",
+    "ImportSuccess_other": "{{count}}개의 아이템에 대한 태그와 메모를 불러왔습니다.",
     "ImportWrongFileType": "이 파일은 CSV 파일이 아닙니다.",
     "WrongFields": "CSV는 'Id', 'Notes', 'Tag', 'Hash' 열을 포함해야 합니다."
   },
@@ -149,18 +149,18 @@
     "Troubleshooting": "문제 해결 가이드"
   },
   "FarmingMode": {
-    "D2Desc": "DIM은 {{store}}의 아이템 종류별로 1개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
-    "D2Desc_female": "DIM은 {{store}}의 아이템 종류별로 1개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
-    "D2Desc_female_plural": "DIM은 {{store}}의 아이템 종류별로 {{count}}개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
-    "D2Desc_male": "DIM은 {{store}}의 아이템 종류별로 1개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
-    "D2Desc_male_plural": "DIM은 {{store}}의 아이템 종류별로 {{count}}개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
-    "D2Desc_plural": "DIM은 {{store}}의 아이템 종류별로 {{count}}개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
-    "Desc": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 1개의 빈 공간을 확보하고 있습니다.",
-    "Desc_female": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 1개의 빈 공간을 확보하고 있습니다.",
-    "Desc_female_plural": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 {{count}}개의 빈 공간을 확보하고 있습니다.",
-    "Desc_male": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 1개의 빈 공간을 확보하고 있습니다.",
-    "Desc_male_plural": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 {{count}}개의 빈 공간을 확보하고 있습니다.",
-    "Desc_plural": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 {{count}}개의 빈 공간을 확보하고 있습니다.",
+    "D2Desc_one": "DIM은 {{store}}의 아이템 종류별로 1개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
+    "D2Desc_female_one": "DIM은 {{store}}의 아이템 종류별로 1개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
+    "D2Desc_female_other": "DIM은 {{store}}의 아이템 종류별로 {{count}}개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
+    "D2Desc_male_one": "DIM은 {{store}}의 아이템 종류별로 1개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
+    "D2Desc_male_other": "DIM은 {{store}}의 아이템 종류별로 {{count}}개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
+    "D2Desc_other": "DIM은 {{store}}의 아이템 종류별로 {{count}}개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
+    "Desc_one": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 1개의 빈 공간을 확보하고 있습니다.",
+    "Desc_female_one": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 1개의 빈 공간을 확보하고 있습니다.",
+    "Desc_female_other": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 {{count}}개의 빈 공간을 확보하고 있습니다.",
+    "Desc_male_one": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 1개의 빈 공간을 확보하고 있습니다.",
+    "Desc_male_other": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 {{count}}개의 빈 공간을 확보하고 있습니다.",
+    "Desc_other": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 {{count}}개의 빈 공간을 확보하고 있습니다.",
     "FarmingMode": "파밍 모드",
     "FarmingModeNote": "(획득할 아이템을 위해 공간 관리)",
     "MakeRoom": {
@@ -204,12 +204,12 @@
     "ArmorIntrinsic": "계략 방어구와 같이 본질 특성이 있는 전설 방어구를 표시합니다.",
     "Ascended": "승천 노드가 있으며 승천이 완료된 아이템을 표시합니다.",
     "Breaker": "용사 차단기나 용사 종류를 기준으로 표시합니다. breaker:instrinsic을 사용하여 용사 차단기 본질 특성이 있는 아이템을 표시합니다.",
-    "BulkClear": "1개의 아이템에서 태그를 제거하였습니다.",
-    "BulkClear_plural": "{{count}}개의 아이템에서 태그를 제거하였습니다.",
-    "BulkRevert": "1개의 아이템의 태그를 되돌렸습니다.",
-    "BulkRevert_plural": "{{count}}개의 아이템의 태그를 되돌렸습니다.",
-    "BulkTag": "선택된 아이템에 {{tag}} 태그를 지정하였습니다.",
-    "BulkTag_plural": "{{count}}개의 선택된 아이템에 {{tag}} 태그를 지정하였습니다.",
+    "BulkClear_one": "1개의 아이템에서 태그를 제거하였습니다.",
+    "BulkClear_other": "{{count}}개의 아이템에서 태그를 제거하였습니다.",
+    "BulkRevert_one": "1개의 아이템의 태그를 되돌렸습니다.",
+    "BulkRevert_other": "{{count}}개의 아이템의 태그를 되돌렸습니다.",
+    "BulkTag_one": "선택된 아이템에 {{tag}} 태그를 지정하였습니다.",
+    "BulkTag_other": "{{count}}개의 선택된 아이템에 {{tag}} 태그를 지정하였습니다.",
     "Catalyst": "촉매제를 현재 상태에 따라 표시합니다. catalyst:complete는 완료하고 장착된 촉매제를 표시하며, catalyst:incomplete는 잠금 해제하였으나 완료하지 않았거나 장착하지 않은 촉매제를 표시하며, catalyst:missing은 촉매제를 장착할 수 있으나 아직 찾지 못한 아이템을 표시합니다.",
     "Class": "직업을 기준으로 아이템을 표시합니다.",
     "Combine": "필터는 \"{{example}}\"와 같이 괄호, \"or\" 및 \"and\"로 결합하거나 그룹화하여 검색 범위를 좁힐 수 있습니다.",
@@ -379,8 +379,8 @@
     "FilterHelpOptimizer": "로드아웃에서 검토할 방어구 선택: {{example}}",
     "FilterHelpProgress": "이정표와 현상금 검색",
     "FilterHelpRecords": "업적과 수집품 검색",
-    "FilterMatchCount": "아이템 1개",
-    "FilterMatchCount_plural": "아이템 {{count}}개",
+    "FilterMatchCount_one": "아이템 1개",
+    "FilterMatchCount_other": "아이템 {{count}}개",
     "Filters": "필터",
     "InstallDIM": "앱으로 설치",
     "InstallDIMBanner": "DIM을 홈 화면에 앱으로 설치",
@@ -799,8 +799,8 @@
     "InGameLoadouts": "게임 내 로드아웃",
     "IncludeRuntimeStatBenefits": "샘 개조 부품 능력치 포함",
     "IncludeRuntimeStatBenefitsDesc": "\"... 샘\" 방어구 개조 부품은 방어구 충전이 있는 동안 캐릭터 능력치를 일정하게 향상시킵니다.\n\n이 설정이 켜진 경우, DIM은 이 개조 부품이 활성화된 것으로 간주하고 로드아웃의 능력치 계산과 최적화에 사용합니다.",
-    "ItemErrorSummary": "1개의 아이템 오류:",
-    "ItemErrorSummary_plural": "{{count}}개의 아이템 오류:",
+    "ItemErrorSummary_one": "1개의 아이템 오류:",
+    "ItemErrorSummary_other": "{{count}}개의 아이템 오류:",
     "ItemLeveling": "아이템 레벨 올리기",
     "LoadoutName": "로드아웃 이름",
     "LoadoutParameters": "로드아웃 최적화 설정",
@@ -809,12 +809,12 @@
     "LoadoutParametersStats": "능력치 선호도와 최소/최대 능력치 등급",
     "Loadouts": "로드아웃",
     "MakeRoom": "우편 담당자를 위한 공간 생성",
-    "MakeRoomDone": "{{store}}에서 1개의 아이템을 옮김으로써 우편 담당자 아이템 1개를 위한 공간을 만들었습니다.",
-    "MakeRoomDone_female": "{{store}}에서 1개의 아이템을 옮김으로써 우편 담당자 아이템 1개를 위한 공간을 만들었습니다.",
-    "MakeRoomDone_female_plural": "{{store}}에서 {{movedNum}}개의 아이템을 옮겨서 우편 담당자 아이템 {{count}}개를 위한 공간을 만들었습니다.",
-    "MakeRoomDone_male": "{{store}}에서 1개의 아이템을 옮김으로써 우편 담당자 아이템 1개를 위한 공간을 만들었습니다.",
-    "MakeRoomDone_male_plural": "{{store}}에서 {{movedNum}}개의 아이템을 옮겨서 우편 담당자 아이템 {{count}}개를 위한 공간을 만들었습니다.",
-    "MakeRoomDone_plural": "{{store}}에서 {{movedNum}}개의 아이템을 옮겨서 우편 담당자 아이템 {{count}}개를 위한 공간을 만들었습니다.",
+    "MakeRoomDone_one": "{{store}}에서 1개의 아이템을 옮김으로써 우편 담당자 아이템 1개를 위한 공간을 만들었습니다.",
+    "MakeRoomDone_female_one": "{{store}}에서 1개의 아이템을 옮김으로써 우편 담당자 아이템 1개를 위한 공간을 만들었습니다.",
+    "MakeRoomDone_female_other": "{{store}}에서 {{movedNum}}개의 아이템을 옮겨서 우편 담당자 아이템 {{count}}개를 위한 공간을 만들었습니다.",
+    "MakeRoomDone_male_one": "{{store}}에서 1개의 아이템을 옮김으로써 우편 담당자 아이템 1개를 위한 공간을 만들었습니다.",
+    "MakeRoomDone_male_other": "{{store}}에서 {{movedNum}}개의 아이템을 옮겨서 우편 담당자 아이템 {{count}}개를 위한 공간을 만들었습니다.",
+    "MakeRoomDone_other": "{{store}}에서 {{movedNum}}개의 아이템을 옮겨서 우편 담당자 아이템 {{count}}개를 위한 공간을 만들었습니다.",
     "MakeRoomError": "모든 우편 담당자 아이템을 위한 공간을 만들 수 없습니다: {{error}}",
     "ManageLoadouts": "로드아웃 관리",
     "MaxSlots": "로드아웃에는 최대 {{slots}}개의 {{bucketName}}을(를) 포함할 수 있습니다.",
@@ -822,17 +822,17 @@
     "MaximizePower": "최대 전투력",
     "MaximizeStat": "능력치 최대화",
     "MissingItemsWarning": "이 로드아웃의 일부 아이템이 더 이상 소지품에 없습니다.",
-    "ModErrorSummary": "1개의 개조 부품 오류:",
-    "ModErrorSummary_plural": "{{count}}개의 개조 부품 오류:",
+    "ModErrorSummary_one": "1개의 개조 부품 오류:",
+    "ModErrorSummary_other": "{{count}}개의 개조 부품 오류:",
     "ModPlacement": {
       "InvalidMods": "잘못된 개조 부품",
-      "InvalidModsDesc": "1개의 개조 부품을 방어구에 장착할 수 없습니다.",
-      "InvalidModsDesc_plural": "{{count}}개의 개조 부품을 방어구에 장착할 수 없습니다.",
+      "InvalidModsDesc_one": "1개의 개조 부품을 방어구에 장착할 수 없습니다.",
+      "InvalidModsDesc_other": "{{count}}개의 개조 부품을 방어구에 장착할 수 없습니다.",
       "ModPlacement": "개조 부품 배치",
       "StackableMod": "중첩 가능",
       "UnassignedMods": "할당되지 않은 개조 부품",
-      "UnassignedModsDesc": "1개의 개조 부품이 에너지 수용량이 부족하거나 개조 부품 슬롯이 부족하여 장착할 수 없습니다. 선택된 방어구의 에너지를 업그레이드하여도 해결되지 않습니다.",
-      "UnassignedModsDesc_plural": "{{count}}개의 개조 부품이 에너지 수용량이 부족하거나 개조 부품 슬롯이 부족하여 장착할 수 없습니다. 선택된 방어구의 에너지를 업그레이드하여도 해결되지 않습니다.",
+      "UnassignedModsDesc_one": "1개의 개조 부품이 에너지 수용량이 부족하거나 개조 부품 슬롯이 부족하여 장착할 수 없습니다. 선택된 방어구의 에너지를 업그레이드하여도 해결되지 않습니다.",
+      "UnassignedModsDesc_other": "{{count}}개의 개조 부품이 에너지 수용량이 부족하거나 개조 부품 슬롯이 부족하여 장착할 수 없습니다. 선택된 방어구의 에너지를 업그레이드하여도 해결되지 않습니다.",
       "UnstackableMod": "중첩 불가",
       "UpgradeCosts": "업그레이드 비용",
       "UpgradeCostsDesc": "요청한 개조 부품을 장착하기 위해서 일부 방어구의 에너지 수용량을 업그레이드해야 합니다. 총 업그레이드 비용:"
@@ -861,12 +861,12 @@
     "PullFromPostmaster": "우편 담당자에게서 수령",
     "PullFromPostmasterError": "우편 담당자로부터 가져올 수 없습니다: {{error}}",
     "PullFromPostmasterGeneralError": "우편 담당자에게서 모든 아이템을 가져올 수 없습니다.",
-    "PullFromPostmasterNotification": "1개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
-    "PullFromPostmasterNotification_female": "1개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
-    "PullFromPostmasterNotification_female_plural": "{{count}}개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
-    "PullFromPostmasterNotification_male": "1개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
-    "PullFromPostmasterNotification_male_plural": "{{count}}개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
-    "PullFromPostmasterNotification_plural": "{{count}}개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
+    "PullFromPostmasterNotification_one": "1개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
+    "PullFromPostmasterNotification_female_one": "1개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
+    "PullFromPostmasterNotification_female_other": "{{count}}개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
+    "PullFromPostmasterNotification_male_one": "1개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
+    "PullFromPostmasterNotification_male_other": "{{count}}개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
+    "PullFromPostmasterNotification_other": "{{count}}개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
     "PullFromPostmasterPopupTitle": "우편 담당자에게서 가져오기",
     "Random": "무작위",
     "Randomize": "무작위 로드아웃",
@@ -896,10 +896,10 @@
       "LoadoutOptimizer": "로드아웃 최적화 설정",
       "NativeShare": "주소 공유",
       "Notes": "메모",
-      "NumItems": "아이템 {{count}}개 - 받는 사람은 소지품에서 유사한 아이템을 선택하라는 메시지가 표시됩니다",
-      "NumItems_plural": "아이템 {{count}}개 - 받는 사람은 소지품에서 유사한 아이템을 선택하라는 메시지가 표시됩니다",
-      "NumMods": "개조 부품 {{count}}개",
-      "NumMods_plural": "개조 부품 {{count}}개",
+      "NumItems_one": "아이템 {{count}}개 - 받는 사람은 소지품에서 유사한 아이템을 선택하라는 메시지가 표시됩니다",
+      "NumItems_other": "아이템 {{count}}개 - 받는 사람은 소지품에서 유사한 아이템을 선택하라는 메시지가 표시됩니다",
+      "NumMods_one": "개조 부품 {{count}}개",
+      "NumMods_other": "개조 부품 {{count}}개",
       "Placeholder": "공유 주소 가져오는 중",
       "Subclass": "하위직업 사용자 정의",
       "Summary": "다음을 포함하는 로드아웃 공유:",
@@ -1107,8 +1107,8 @@
     "PaleHeartPathfinder": "창백한 심장 길잡이",
     "PercentMax": "최대까지 {{pct}}%",
     "PercentPrestige": "초기화까지 {{pct}}%",
-    "PointsUsed": "1 포인트 사용됨",
-    "PointsUsed_plural": "{{count}} 포인트 사용됨",
+    "PointsUsed_one": "1 포인트 사용됨",
+    "PointsUsed_other": "{{count}} 포인트 사용됨",
     "PowerBonusHeader": "+{{powerBonus}} 전투력 보상",
     "PowerBonusHeaderUndefined": "다른 보상",
     "Progress": "진척도",
@@ -1118,8 +1118,8 @@
     "Quests": "퀘스트",
     "Rank": "{{name}} {{rank}}",
     "RecordValue": "{{value}}점",
-    "Resets": "초기화 1회",
-    "Resets_plural": "초기화 {{count}}회",
+    "Resets_one": "초기화 1회",
+    "Resets_other": "초기화 {{count}}회",
     "StatTrackers": "통계 추적기",
     "TrackedTriumphs": "추적 중인 업적",
     "VanguardPathfinder": "선봉대 길잡이"
@@ -1216,8 +1216,8 @@
     "SortByWeaponElement": "피해 유형",
     "SortCustom": "사용자 지정 정렬",
     "SortName": "이름",
-    "SpacesSize": "{{count}}개의 공간",
-    "SpacesSize_plural": "{{count}}개의 공간",
+    "SpacesSize_one": "{{count}}개의 공간",
+    "SpacesSize_other": "{{count}}개의 공간",
     "Theme": "테마",
     "VaultArmorGroupingStyle": "직업별로 다른 줄에 방어구 표시",
     "VaultGroupingNone": "없음",
@@ -1343,8 +1343,8 @@
     "UpdateInvalid": "DIM 동기화에 데이터 저장 실패",
     "UpdateInvalidBody": "DIM 동기화에 비정상적인 데이터가 전송되었으며 저장되지 않았습니다.",
     "UpdateInvalidBodyLoadout": "\"{{name}}\" 로드아웃에 문제가 있으며 저장되지 않습니다. 다른 사이트에서 가져왔다면, 해당 사이트에 잘못된 로드아웃이라고 알려주시기 바랍니다.",
-    "UpdateQueueLength": "서버에 다시 연결되었을 때 {{count}}개의 새로운 변경 사항이 저장됩니다.",
-    "UpdateQueueLength_plural": "서버에 다시 연결되었을 때 {{count}}개의 새로운 변경 사항이 저장됩니다.",
+    "UpdateQueueLength_one": "서버에 다시 연결되었을 때 {{count}}개의 새로운 변경 사항이 저장됩니다.",
+    "UpdateQueueLength_other": "서버에 다시 연결되었을 때 {{count}}개의 새로운 변경 사항이 저장됩니다.",
     "Usage": "DIM은 이 기기에서 {{quota, humanBytes}} 중 {{usage, humanBytes}}를 사용하고 있습니다. 이는 Bungie.net에서 다운로드한 데스티니 아이템 데이터베이스를 포함하고 있습니다."
   },
   "StreamDeck": {
@@ -1480,8 +1480,8 @@
     }
   },
   "WishListRoll": {
-    "BestRatedTip": "희망 아이템 목록에 있는 무기의 특성 조합과 일치하는 특성입니다.",
-    "BestRatedTip_plural": "희망 아이템 목록에 있는 무기의 특성 조합과 일치합니다.",
+    "BestRatedTip_one": "희망 아이템 목록에 있는 무기의 특성 조합과 일치하는 특성입니다.",
+    "BestRatedTip_other": "희망 아이템 목록에 있는 무기의 특성 조합과 일치합니다.",
     "Clear": "희망 아이템 목록 비우기",
     "CopiedLine": "희망 아이템 목록 특성 조합이 클립보드에 복사됨",
     "CopyLine": "선택한 특성을 희망 아이템 목록 특성 조합으로 복사",
@@ -1503,8 +1503,8 @@
     "UpdateExternalSource": "희망 아이템 목록 추가",
     "Voltron": "voltron (기본값)",
     "WishListNotes": "희망 아이템 목록 메모:",
-    "WorstRatedTip": "쓰레기 아이템 목록에 있는 무기의 특성 조합과 일치하는 특성입니다.",
-    "WorstRatedTip_plural": "쓰레기 아이템 목록에 있는 무기의 특성 조합과 일치합니다."
+    "WorstRatedTip_one": "쓰레기 아이템 목록에 있는 무기의 특성 조합과 일치하는 특성입니다.",
+    "WorstRatedTip_other": "쓰레기 아이템 목록에 있는 무기의 특성 조합과 일치합니다."
   },
   "no-space": "no-space",
   "wrong-level": "wrong-level"
