--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -32,11 +32,11 @@
     "NoNotes": "No Notes",
     "OpenInArmory": "view in Armory",
     "Season": "Season {{season}}, Year {{year}}",
-    "TrashlistedRolls": "Trashlisted Roll",
-    "TrashlistedRolls_plural": "{{count, number}} Trashlisted Rolls",
+    "TrashlistedRolls_one": "Trashlisted Roll",
+    "TrashlistedRolls_other": "{{count, number}} Trashlisted Rolls",
     "Unknown": "Unknown Item",
-    "WishlistedRolls": "Wishlisted Roll",
-    "WishlistedRolls_plural": "{{count, number}} Wishlisted Rolls",
+    "WishlistedRolls_one": "Wishlisted Roll",
+    "WishlistedRolls_other": "{{count, number}} Wishlisted Rolls",
     "YourItems": "Your Items"
   },
   "Browsercheck": {
@@ -62,8 +62,8 @@
     "Confirm": "Update Notes",
     "Remove": "Remove from notes / remove #hashtags",
     "Replace": "Replace notes",
-    "Title": "Change notes for 1 item",
-    "Title_plural": "Change notes for {{count}} items"
+    "Title_one": "Change notes for 1 item",
+    "Title_other": "Change notes for {{count}} items"
   },
   "BungieAlert": {
     "Title": "A message from Bungie:"
@@ -113,17 +113,17 @@
     "Super": "Super cooldown: {{cooldown}}"
   },
   "Countdown": {
-    "Days": "1 Day",
-    "Days_compact": "{{count}}d",
-    "Days_compact_plural": "{{count}}d",
-    "Days_plural": "{{count}} Days"
+    "Days_one": "1 Day",
+    "Days_compact_one": "{{count}}d",
+    "Days_compact_other": "{{count}}d",
+    "Days_other": "{{count}} Days"
   },
   "Csv": {
     "EmptyFile": "There were no rows in the file.",
     "ImportConfirm": "Are you sure you want to import tags/notes from CSV? This will overwrite tags/notes for all items contained in your spreadsheet.",
     "ImportFailed": "Failed to import tags/notes from CSV: {{error}}",
-    "ImportSuccess": "Tags/notes loaded for one item.",
-    "ImportSuccess_plural": "Tags/notes loaded for {{count}} items.",
+    "ImportSuccess_one": "Tags/notes loaded for one item.",
+    "ImportSuccess_other": "Tags/notes loaded for {{count}} items.",
     "ImportWrongFileType": "File is not a CSV file.",
     "WrongFields": "CSV must have 'Id', 'Notes', 'Tag', and 'Hash' columns."
   },
@@ -149,18 +149,18 @@
     "Troubleshooting": "Troubleshooting Guide"
   },
   "FarmingMode": {
-    "D2Desc": "DIM is preventing items from going to the Postmaster by making sure there's always one empty space per item type on {{store}}.",
-    "D2Desc_female": "DIM is preventing items from going to the Postmaster by making sure there's always one empty space per item type on {{store}}.",
-    "D2Desc_female_plural": "DIM is preventing items from going to the Postmaster by making sure there's always {{count}} empty spaces per item type on {{store}}.",
-    "D2Desc_male": "DIM is preventing items from going to the Postmaster by making sure there's always one empty space per item type on {{store}}.",
-    "D2Desc_male_plural": "DIM is preventing items from going to the Postmaster by making sure there's always {{count}} empty spaces per item type on {{store}}.",
-    "D2Desc_plural": "DIM is preventing items from going to the Postmaster by making sure there's always {{count}} empty spaces per item type on {{store}}.",
-    "Desc": "DIM is moving Engram and Glimmer items from {{store}} to the vault and keeping one empty space open per item type to prevent anything from going to the Postmaster.",
-    "Desc_female": "DIM is moving Engram and Glimmer items from {{store}} to the vault and keeping one empty space open per item type to prevent anything from going to the Postmaster.",
-    "Desc_female_plural": "DIM is moving Engram and Glimmer items from {{store}} to the vault and keeping {{count}} spaces open per item type to prevent anything from going to the Postmaster.",
-    "Desc_male": "DIM is moving Engram and Glimmer items from {{store}} to the vault and keeping one empty space open per item type to prevent anything from going to the Postmaster.",
-    "Desc_male_plural": "DIM is moving Engram and Glimmer items from {{store}} to the vault and keeping {{count}} spaces open per item type to prevent anything from going to the Postmaster.",
-    "Desc_plural": "DIM is moving Engram and Glimmer items from {{store}} to the vault and keeping {{count}} spaces open per item type to prevent anything from going to the Postmaster.",
+    "D2Desc_one": "DIM is preventing items from going to the Postmaster by making sure there's always one empty space per item type on {{store}}.",
+    "D2Desc_female_one": "DIM is preventing items from going to the Postmaster by making sure there's always one empty space per item type on {{store}}.",
+    "D2Desc_female_other": "DIM is preventing items from going to the Postmaster by making sure there's always {{count}} empty spaces per item type on {{store}}.",
+    "D2Desc_male_one": "DIM is preventing items from going to the Postmaster by making sure there's always one empty space per item type on {{store}}.",
+    "D2Desc_male_other": "DIM is preventing items from going to the Postmaster by making sure there's always {{count}} empty spaces per item type on {{store}}.",
+    "D2Desc_other": "DIM is preventing items from going to the Postmaster by making sure there's always {{count}} empty spaces per item type on {{store}}.",
+    "Desc_one": "DIM is moving Engram and Glimmer items from {{store}} to the vault and keeping one empty space open per item type to prevent anything from going to the Postmaster.",
+    "Desc_female_one": "DIM is moving Engram and Glimmer items from {{store}} to the vault and keeping one empty space open per item type to prevent anything from going to the Postmaster.",
+    "Desc_female_other": "DIM is moving Engram and Glimmer items from {{store}} to the vault and keeping {{count}} spaces open per item type to prevent anything from going to the Postmaster.",
+    "Desc_male_one": "DIM is moving Engram and Glimmer items from {{store}} to the vault and keeping one empty space open per item type to prevent anything from going to the Postmaster.",
+    "Desc_male_other": "DIM is moving Engram and Glimmer items from {{store}} to the vault and keeping {{count}} spaces open per item type to prevent anything from going to the Postmaster.",
+    "Desc_other": "DIM is moving Engram and Glimmer items from {{store}} to the vault and keeping {{count}} spaces open per item type to prevent anything from going to the Postmaster.",
     "FarmingMode": "Farming Mode",
     "FarmingModeNote": "(maintain space for drops)",
     "MakeRoom": {
@@ -204,12 +204,12 @@
     "ArmorIntrinsic": "Shows legendary armor which has an intrinsic perk, such as Artifice Armor.",
     "Ascended": "Shows items that have an ascend node which have been ascended.",
     "Breaker": "Filter by breaker type or corresponding champion type. breaker:instrinsic shows items with intrinsic breaker ability.",
-    "BulkClear": "Removed tag from 1 item.",
-    "BulkClear_plural": "Removed tags from {{count}} items.",
-    "BulkRevert": "Reverted tag on 1 item.",
-    "BulkRevert_plural": "Reverted tags on {{count}} items.",
-    "BulkTag": "Tagged selected item as {{tag}}.",
-    "BulkTag_plural": "Tagged {{count}} selected items as {{tag}}.",
+    "BulkClear_one": "Removed tag from 1 item.",
+    "BulkClear_other": "Removed tags from {{count}} items.",
+    "BulkRevert_one": "Reverted tag on 1 item.",
+    "BulkRevert_other": "Reverted tags on {{count}} items.",
+    "BulkTag_one": "Tagged selected item as {{tag}}.",
+    "BulkTag_other": "Tagged {{count}} selected items as {{tag}}.",
     "Catalyst": "Shows catalysts based on their status. catalyst:complete shows catalysts you have completed and applied, catalyst:incomplete shows catalysts you have unlocked but either not completed the objective or applied the catalyst, and catalyst:missing shows items that can have a catalyst but you haven't found it yet.",
     "Class": "Shows items based on their class affinity.",
     "Combine": "Filters can be combined or grouped with parentheses, \"or\" and \"and\" to narrow down your search, for example \"{{example}}\".",
@@ -379,8 +379,8 @@
     "FilterHelpOptimizer": "Select armor to be considered for loadouts: {{example}}",
     "FilterHelpProgress": "Search milestones and bounties",
     "FilterHelpRecords": "Search triumphs and collections",
-    "FilterMatchCount": "1 item",
-    "FilterMatchCount_plural": "{{count}} items",
+    "FilterMatchCount_one": "1 item",
+    "FilterMatchCount_other": "{{count}} items",
     "Filters": "Filters",
     "InstallDIM": "Install as an App",
     "InstallDIMBanner": "Install DIM as an app on your home screen",
@@ -799,8 +799,8 @@
     "InGameLoadouts": "In-Game Loadouts",
     "IncludeRuntimeStatBenefits": "Include Font mod stats",
     "IncludeRuntimeStatBenefitsDesc": "\"Font of ...\" armor mods provide a flat boost to character stats while you have Armor Charges.\n\nWith this setting, DIM considers these mods active and adds their benefits to this Loadout's stats in calculations and optimizations.",
-    "ItemErrorSummary": "1 item error:",
-    "ItemErrorSummary_plural": "{{count}} item errors:",
+    "ItemErrorSummary_one": "1 item error:",
+    "ItemErrorSummary_other": "{{count}} item errors:",
     "ItemLeveling": "Item Leveling",
     "LoadoutName": "Loadout name",
     "LoadoutParameters": "Loadout Optimizer settings",
@@ -809,12 +809,12 @@
     "LoadoutParametersStats": "Stat priorities and minimum/maximum stat tiers",
     "Loadouts": "Loadouts",
     "MakeRoom": "Make Room for Postmaster",
-    "MakeRoomDone": "Finished making room for 1 Postmaster item by moving 1 item off of {{store}}.",
-    "MakeRoomDone_female": "Finished making room for 1 Postmaster item by moving 1 item off of {{store}}.",
-    "MakeRoomDone_female_plural": "Finished making room for {{count}} Postmaster items by moving {{movedNum}} items off of {{store}}.",
-    "MakeRoomDone_male": "Finished making room for 1 Postmaster item by moving 1 item off of {{store}}.",
-    "MakeRoomDone_male_plural": "Finished making room for {{count}} Postmaster items by moving {{movedNum}} items off of {{store}}.",
-    "MakeRoomDone_plural": "Finished making room for {{count}} Postmaster items by moving {{movedNum}} items off of {{store}}.",
+    "MakeRoomDone_one": "Finished making room for 1 Postmaster item by moving 1 item off of {{store}}.",
+    "MakeRoomDone_female_one": "Finished making room for 1 Postmaster item by moving 1 item off of {{store}}.",
+    "MakeRoomDone_female_other": "Finished making room for {{count}} Postmaster items by moving {{movedNum}} items off of {{store}}.",
+    "MakeRoomDone_male_one": "Finished making room for 1 Postmaster item by moving 1 item off of {{store}}.",
+    "MakeRoomDone_male_other": "Finished making room for {{count}} Postmaster items by moving {{movedNum}} items off of {{store}}.",
+    "MakeRoomDone_other": "Finished making room for {{count}} Postmaster items by moving {{movedNum}} items off of {{store}}.",
     "MakeRoomError": "Unable to make room for all Postmaster items: {{error}}.",
     "ManageLoadouts": "Manage Loadouts",
     "MaxSlots": "You can only have {{slots}} {{bucketName}} in a loadout.",
@@ -822,17 +822,17 @@
     "MaximizePower": "Max Power",
     "MaximizeStat": "Maximize Stat",
     "MissingItemsWarning": "Some of the items in this loadout are no longer in your inventory.",
-    "ModErrorSummary": "1 mod error:",
-    "ModErrorSummary_plural": "{{count}} mod errors:",
+    "ModErrorSummary_one": "1 mod error:",
+    "ModErrorSummary_other": "{{count}} mod errors:",
     "ModPlacement": {
       "InvalidMods": "Invalid Mods",
-      "InvalidModsDesc": "1 mod cannot fit into any armor piece.",
-      "InvalidModsDesc_plural": "{{count}} mods cannot fit into any armor piece.",
+      "InvalidModsDesc_one": "1 mod cannot fit into any armor piece.",
+      "InvalidModsDesc_other": "{{count}} mods cannot fit into any armor piece.",
       "ModPlacement": "Mod Placement",
       "StackableMod": "Stackable",
       "UnassignedMods": "Unassigned Mods",
-      "UnassignedModsDesc": "1 mod did not fit due to insufficient energy capacity or mod slots. Energy upgrades to the selected armor will not fix the issue.",
-      "UnassignedModsDesc_plural": "{{count}} mods did not fit due to insufficient energy capacity or mod slots. Energy upgrades to the selected armor will not fix the issue.",
+      "UnassignedModsDesc_one": "1 mod did not fit due to insufficient energy capacity or mod slots. Energy upgrades to the selected armor will not fix the issue.",
+      "UnassignedModsDesc_other": "{{count}} mods did not fit due to insufficient energy capacity or mod slots. Energy upgrades to the selected armor will not fix the issue.",
       "UnstackableMod": "Not Stackable",
       "UpgradeCosts": "Upgrade Costs",
       "UpgradeCostsDesc": "Some armor needs energy capacity upgrades to fit the requested mods. In total, these upgrades cost:"
@@ -861,12 +861,12 @@
     "PullFromPostmaster": "Collect Postmaster",
     "PullFromPostmasterError": "Unable to pull from Postmaster: {{error}}.",
     "PullFromPostmasterGeneralError": "Unable to pull all items from Postmaster.",
-    "PullFromPostmasterNotification": "Pulling 1 Postmaster item to {{store}}.",
-    "PullFromPostmasterNotification_female": "Pulling 1 Postmaster item to {{store}}.",
-    "PullFromPostmasterNotification_female_plural": "Pulling {{count}} Postmaster items to {{store}}.",
-    "PullFromPostmasterNotification_male": "Pulling 1 Postmaster item to {{store}}.",
-    "PullFromPostmasterNotification_male_plural": "Pulling {{count}} Postmaster items to {{store}}.",
-    "PullFromPostmasterNotification_plural": "Pulling {{count}} Postmaster items to {{store}}.",
+    "PullFromPostmasterNotification_one": "Pulling 1 Postmaster item to {{store}}.",
+    "PullFromPostmasterNotification_female_one": "Pulling 1 Postmaster item to {{store}}.",
+    "PullFromPostmasterNotification_female_other": "Pulling {{count}} Postmaster items to {{store}}.",
+    "PullFromPostmasterNotification_male_one": "Pulling 1 Postmaster item to {{store}}.",
+    "PullFromPostmasterNotification_male_other": "Pulling {{count}} Postmaster items to {{store}}.",
+    "PullFromPostmasterNotification_other": "Pulling {{count}} Postmaster items to {{store}}.",
     "PullFromPostmasterPopupTitle": "Pull from Postmaster",
     "Random": "Random",
     "Randomize": "Randomize Loadout",
@@ -896,10 +896,10 @@
       "LoadoutOptimizer": "Loadout Optimizer settings",
       "NativeShare": "Share Link",
       "Notes": "Notes",
-      "NumItems": "{{count}} item - recipients will be prompted to select a comparable item from their inventory",
-      "NumItems_plural": "{{count}} items - recipients will be prompted to select comparable items from their inventory",
-      "NumMods": "{{count}} mod",
-      "NumMods_plural": "{{count}} mods",
+      "NumItems_one": "{{count}} item - recipients will be prompted to select a comparable item from their inventory",
+      "NumItems_other": "{{count}} items - recipients will be prompted to select comparable items from their inventory",
+      "NumMods_one": "{{count}} mod",
+      "NumMods_other": "{{count}} mods",
       "Placeholder": "Loading share link",
       "Subclass": "Subclass customization",
       "Summary": "Share this loadout containing:",
@@ -1107,8 +1107,8 @@
     "PaleHeartPathfinder": "Pale Heart Pathfinder",
     "PercentMax": "{{pct}}% to maximum",
     "PercentPrestige": "{{pct}}% to reset",
-    "PointsUsed": "1 point used",
-    "PointsUsed_plural": "{{count}} points used",
+    "PointsUsed_one": "1 point used",
+    "PointsUsed_other": "{{count}} points used",
     "PowerBonusHeader": "+{{powerBonus}} Power Rewards",
     "PowerBonusHeaderUndefined": "Other Rewards",
     "Progress": "Progress",
@@ -1118,8 +1118,8 @@
     "Quests": "Quests",
     "Rank": "{{name}} {{rank}}",
     "RecordValue": "{{value}}pts",
-    "Resets": "1 reset",
-    "Resets_plural": "{{count}} resets",
+    "Resets_one": "1 reset",
+    "Resets_other": "{{count}} resets",
     "StatTrackers": "Stat Trackers",
     "TrackedTriumphs": "Tracked Triumphs",
     "VanguardPathfinder": "Vanguard Pathfinder"
@@ -1216,8 +1216,8 @@
     "SortByWeaponElement": "Damage Type",
     "SortCustom": "Custom Sort",
     "SortName": "Name",
-    "SpacesSize": "{{count}} space",
-    "SpacesSize_plural": "{{count}} spaces",
+    "SpacesSize_one": "{{count}} space",
+    "SpacesSize_other": "{{count}} spaces",
     "Theme": "Theme",
     "VaultArmorGroupingStyle": "Separate armor on different lines by class",
     "VaultGroupingNone": "None",
@@ -1343,8 +1343,8 @@
     "UpdateInvalid": "Failed to save data to DIM Sync",
     "UpdateInvalidBody": "Data sent to DIM Sync was invalid and will not be saved.",
     "UpdateInvalidBodyLoadout": "The loadout \"{{name}}\" is invalid and will not be saved. If you imported it from another site, please let them know that they are exporting invalid loadouts.",
-    "UpdateQueueLength": "{{count}} new change will be saved when we can reconnect.",
-    "UpdateQueueLength_plural": "{{count}} new changes will be saved when we can reconnect.",
+    "UpdateQueueLength_one": "{{count}} new change will be saved when we can reconnect.",
+    "UpdateQueueLength_other": "{{count}} new changes will be saved when we can reconnect.",
     "Usage": "DIM is using {{usage, humanBytes}} out of {{quota, humanBytes}} available to it on this device. This includes the downloaded Destiny item databases from Bungie.net."
   },
   "StreamDeck": {
@@ -1480,8 +1480,8 @@
     }
   },
   "WishListRoll": {
-    "BestRatedTip": "This perk exactly matches a weapon roll on your wishlist.",
-    "BestRatedTip_plural": "These perks exactly match a weapon roll on your wishlist.",
+    "BestRatedTip_one": "This perk exactly matches a weapon roll on your wishlist.",
+    "BestRatedTip_other": "These perks exactly match a weapon roll on your wishlist.",
     "Clear": "Clear Wish List",
     "CopiedLine": "Wish List roll copied to clipboard",
     "CopyLine": "Copy Selected Perks as Wish List Roll",
@@ -1503,8 +1503,8 @@
     "UpdateExternalSource": "Add Wish List",
     "Voltron": "voltron (default)",
     "WishListNotes": "Wish List Notes:",
-    "WorstRatedTip": "This perk exactly matches a weapon roll on your trashlist.",
-    "WorstRatedTip_plural": "These perks exactly match a weapon roll on your trashlist."
+    "WorstRatedTip_one": "This perk exactly matches a weapon roll on your trashlist.",
+    "WorstRatedTip_other": "These perks exactly match a weapon roll on your trashlist."
   },
   "no-space": "no-space",
   "wrong-level": "wrong-level"
